# scrycall

./: .gitignore  pyproject.toml
scrycall/: __init__.py  __main__.py  scry_args.py  scry_data.py  scry_output.py
