[tool.poetry]
name = "scrycall"
version = "0.1.0"
description = "A command line tool for querying the scryfall.com API for Magic cards."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrycall = 'scrycall:main'